--- a/PMS/Web.config
+++ b/PMS/Web.config
@@ -10,7 +10,8 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=aspnet-PMS-20150304105246;Integrated Security=SSPI" providerName="System.Data.SqlClient" />
-    <add name="PMSDataEntities" connectionString="metadata=res://*/PMSModel.csdl|res://*/PMSModel.ssdl|res://*/PMSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CMAEON-SHRIRAM;initial catalog=PMSData;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="PMSDataEntities" connectionString="metadata=res://*/PMSModel.csdl|res://*/PMSModel.ssdl|res://*/PMSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=CMAEON-SHRIRAM;initial catalog=PMSData;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+    <add name="PMSDataEntities" connectionString="metadata=res://*/PMSModel.csdl|res://*/PMSModel.ssdl|res://*/PMSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=PMSData;integrated security=True;multipleactiveresultsets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
