Groupitem and Main item added

--- a/PMS/PMS.csproj
+++ b/PMS/PMS.csproj
@@ -168,6 +168,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\DialogController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\MainController.cs" />
     <Compile Include="Controllers\PMSStatusController.cs" />
@@ -184,6 +185,12 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\images\ui-icons_444444_256x240.png" />
+    <Content Include="Content\images\ui-icons_555555_256x240.png" />
+    <Content Include="Content\images\ui-icons_777620_256x240.png" />
+    <Content Include="Content\images\ui-icons_777777_256x240.png" />
+    <Content Include="Content\images\ui-icons_cc0000_256x240.png" />
+    <Content Include="Content\images\ui-icons_ffffff_256x240.png" />
     <Content Include="Content\tree.css" />
     <Content Include="Content\jquery-ui.css" />
     <Content Include="Content\Loginstyle.css" />
@@ -377,6 +384,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\PMSStatus\Vendor.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Content\images\Thumbs.db" />
+    <Content Include="Views\Dialog\GroupItem.cshtml" />
+    <Content Include="Views\Dialog\MainItem.cshtml" />
+    <Content Include="Views\Dialog\_ViewStart.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
